# PDF-RAG-Backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: deps.py
app/api/routes/: __init__.py  auth.py  chat.py  documents.py  health.py  jobs.py
app/core/: __init__.py  auth.py  chunking.py  embeddings.py  exceptions.py  pdf_parser.py  query_cache.py  rag_engine.py  vector_store.py
app/db/: database.py  models.py
app/db/models/: __init__.py  base.py  cache.py  chunk.py  citation.py  conversation.py  document.py  processing.py  user.py
app/models/: schemas.py
app/services/: auth_service.py  chat_service.py  document_service.py  processing_service.py
app/workers/: __init__.py  document_worker.py
db/migration/: V1__initial_schema.sql  V2__add_users.sql  V3__add_line_numbers.sql  V4__add_embedding_column.sql  V5__add_hybrid_search.sql
docs/: API_SPECIFICATION.md  ARCHITECTURE_AND_MATH.md  AUTH.md  DATABASE.md  ENGINEERING_OVERVIEW.md  PDF_PROCESSING.md  RAG_MATH.md  README.md
docs/api/: 01_authentication_guide.md  01_authentication_spec.md  02_documents_guide.md  02_documents_spec.md  03_pdf_processing_guide.md  03_pdf_processing_spec.md  04_rag_engine_guide.md  04_rag_engine_spec.md  05_chat_guide.md  05_chat_spec.md  06_jobs_guide.md  06_jobs_spec.md  07_infrastructure_guide.md  07_infrastructure_spec.md
docs/implementations/: 25-01-26 - RAG Cost Optimization.md
scripts/: backfill_embeddings.py  cleanup_cache.py
tests/: conftest.py
tests/api/: test_auth_routes.py  test_chat_routes.py  test_document_routes.py
tests/db/: test_models.py
tests/integration/: test_rag_engine.py  test_vector_store.py
tests/unit/: test_auth.py  test_chunking.py  test_embeddings.py  test_exceptions.py  test_query_cache.py
